# ncnn-android-yolo11

./: .gitignore  README.md  local.properties  settings.gradle
.github/workflows/: release-apk.yml
app/: build.gradle
app/src/main/assets/: yolo11m.ncnn.param  yolo11m_cls.ncnn.param  yolo11m_obb.ncnn.param  yolo11m_pose.ncnn.param  yolo11m_seg.ncnn.param  yolo11s.ncnn.param  yolo11s_cls.ncnn.param  yolo11s_obb.ncnn.param  yolo11s_pose.ncnn.param  yolo11s_seg.ncnn.param
app/src/main/java/com/tencent/yolo11ncnn/: FdUtils.java  FileTool.java  MainActivity.java  YOLO11Ncnn.java
app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  yolo11.cpp  yolo11.h  yolo11_det.cpp  yolo11_obb.cpp  yolo11_pose.cpp  yolo11_seg.cpp  yolo11ncnn.cpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
